about image was not stretching to the correct size in safari only.  Added some coding to the css to fix this via display:flex in the div before the img

--- a/client/src/components/AboutCard/AboutCard.css
+++ b/client/src/components/AboutCard/AboutCard.css
@@ -12,9 +12,11 @@
 @media (min-width: 767px) {
     .aboutCard img{
         border-radius: 2rem 0rem 0rem 2rem;
-        height: 100%;
         width: auto;
-        object-fit: cover
+        object-fit: cover;
     }; 
+}
 
+.aboutImgContainer{
+    display: flex;
 }
